<resources>
    <string name="app_name">GroupNetAndroid</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="first_name">John</string>
    <string name="first_name_indicate">First Name</string>

    <string name="last_name">Smith</string>
    <string name="last_name_indicate">Last Name</string>

    <string name="email_indicate">Email Address</string>

    <string name="phone_number_indicate">Phone Number:</string>

    <string name="required">Required</string>

    <string name="date_of_birth_indicate">Date of Birth</string>
    <string name="date">  \Date</string>
    <string name="month">  Month</string>
    <string name="year">  Year</string>

    <string name="street_indicate">Street:</string>

    <string name="city_indicate">City:</string>

    <string name="state_indicate">State:</string>

    <string name="country_indicate">Country:</string>

    <string name="school_indicate">School</string>

    <string name="next">NEXT</string>

    <string name="asterix">*</string>

    <string name="colon">:</string>
    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
        <item>@drawable/add_new</item>
    </string-array>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="tab_1">Label 1</string>
    <string name="tab_2">Label 2</string>
    <string name="tab_3">Label 3</string>
    <string name="tab_4">Label 4</string>
    <string name="tab_5">Label 5</string>

    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>
    <string name="menu_4">Menu 4</string>
    <string name="menu_5">Menu 5</string>

    <string name="search">Search></string>

</resources>
